[tool.poetry]
name = "adventofcode-2023"
version = "0.1.0"
description = ""
authors = ["Daniel <github@djaekel.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pandas = "^2.1.3"
pydantic = "^2.5.2"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
